# gtfstoosm

./: .gitignore  main.py  noxfile.py  pyproject.toml
.github/workflows/: test.yml
docs/: usage.md
gtfstoosm/: cli.py  convert.py  gtfs.py  osm.py
tests/: test_convert.py  test_gtfs.py
